bk_ida/gccida/c2/form_sum
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5483:4: error: expected ';' after expression
rtx v12; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5483:5: error: use of undeclared identifier 'v12'
rtx v12; // r9 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5487:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5511:1: error: use of undeclared identifier 'v12'
v12 = y; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5516:1: error: use of undeclared identifier 'v12'
v12 = x; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5521:26: error: use of undeclared identifier 'v12'
v6 = (  struct rtx_def *)v12[1]; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5529:7: error: use of undeclared identifier 'v12'; did you mean 'v19'?
rtx = v12->fld[0].rtx; 
      ^~~
      v19
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5490:18: note: 'v19' declared here
 struct rtx_def *v19; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5543:17: error: use of undeclared identifier 'v12'
v15 = form_sum( v12, x->fld[0].rtx); 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5544:11: error: expected ';' after expression
y = ( rtx)x[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5553:35: error: use of undeclared identifier 'v12'
return gen_rtx_fmt_ee( PLUS, v16, v12, x); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5558:35: error: use of undeclared identifier 'v12'
return gen_rtx_fmt_ee( PLUS, v16, v12, x); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5561:1: error: use of undeclared identifier 'v12'
v12 = v12->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5561:7: error: use of undeclared identifier 'v12'; did you mean 'v19'?
v12 = v12->fld[0].rtx; 
      ^~~
      v19
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5490:18: note: 'v19' declared here
 struct rtx_def *v19; // rax 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/reload.c:5564:34: error: use of undeclared identifier 'v12'
v19 = gen_rtx_fmt_ee( PLUS, v16, v12, x); 
                                 ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/form_sum/src/obj/reload.o] Error 1
